--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,9 +24,10 @@ ENV HEADER_NAME apache
 
 COPY sharding-proxy-bin.tar.gz .
 COPY ./tools/wait-for-it.sh /usr/local/bin/
+RUN chmod 777 /usr/local/bin/wait-for-it.sh
 RUN tar -xzvf sharding-proxy-bin.tar.gz
 RUN mv ${HEADER_NAME}*-bin $LOCAL_PATH
 COPY ./driver/mysql-connector-java-5.1.47.jar ${LOCAL_PATH}/lib/mysql-connector-java-5.1.47.jar
 RUN rm -f sharding-proxy-bin.tar.gz
 
-ENTRYPOINT /sharding-proxy/bin/start.sh $PORT && tail -f /sharding-proxy/logs/stdout.log
+ENTRYPOINT /usr/local/bin/wait-for-it.sh sharding-mysql:3306 -- /sharding-proxy/bin/start.sh $PORT && tail -f /sharding-proxy/logs/stdout.log
