--- a/docker/sharding-proxy/sharding/conf/config-master_slave.yaml
+++ b/docker/sharding-proxy/sharding/conf/config-master_slave.yaml
@@ -70,7 +70,7 @@ schemaName: master_slave_db
 
 dataSources:
  master_ds:
-   url: jdbc:mysql://10.222.16.144:3309/demo_ds_master?useUnicode=true&characterEncoding=utf-8
+   url: jdbc:mysql://sharding-mysql:3306/demo_ds_master?useUnicode=true&characterEncoding=utf-8
    username: root
    password: 
    connectionTimeoutMilliseconds: 30000
@@ -78,7 +78,7 @@ dataSources:
    maxLifetimeMilliseconds: 1800000
    maxPoolSize: 50
  slave_ds_0:
-   url: jdbc:mysql://10.222.16.144:3309/demo_ds_slave_0?useUnicode=true&characterEncoding=utf-8
+   url: jdbc:mysql://sharding-mysql:3306/demo_ds_slave_0?useUnicode=true&characterEncoding=utf-8
    username: root
    password: 
    connectionTimeoutMilliseconds: 30000
@@ -86,7 +86,7 @@ dataSources:
    maxLifetimeMilliseconds: 1800000
    maxPoolSize: 50
  slave_ds_1:
-   url: jdbc:mysql://10.222.16.144:3309/demo_ds_slave_1?useUnicode=true&characterEncoding=utf-8
+   url: jdbc:mysql://sharding-mysql:3306/demo_ds_slave_1?useUnicode=true&characterEncoding=utf-8
    username: root
    password: 
    connectionTimeoutMilliseconds: 30000
